--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,2 +1,10 @@
-<h1>Home#index</h1>
-<p>Find me in app/views/home/index.html.erb</p>
+<!-- Home Pagina Inhoud -->
+<nav>
+  <% if user_signed_in? %>
+    <%= link_to 'Uitloggen', destroy_user_session_path, method: :delete %>
+  <% else %>
+    <%= link_to 'Inloggen', new_session_path(:user) %>
+    <%= link_to 'Registreren', new_registration_path(:user) %>
+  <% end %>
+</nav>
+
