--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,7 +1,8 @@
 <!-- Home Pagina Inhoud -->
 <nav>
   <% if user_signed_in? %>
-    <%= link_to 'Uitloggen', destroy_user_session_path, method: :delete %>
+  <%= button_to 'Uitloggen', destroy_user_session_path, method: :delete, form: { class: "inline" } %>
+   
   <% else %>
     <%= link_to 'Inloggen', new_session_path(:user) %>
     <%= link_to 'Registreren', new_registration_path(:user) %>
